# google-authenticator-libpam

./: .gitignore  .travis.yml  FILEFORMAT  Jenkinsfile  Makefile.am  README.authy.md  README.md  bootstrap.sh  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  configuration-help.md  custom.md  totp-codes-are-not-accepted.md
contrib/: README.rpm.md  build-rpm.sh  rpm.spec.in
examples/: demo.co
libpam-webscale-authenticator/DEBIAN/: control
man/: google-authenticator.1  google-authenticator.1.md  pam_google_authenticator.8  pam_google_authenticator.8.md
src/: base32.c  base32_prog.c  did.sh  google-authenticator.c  hmac.c  pam_authy.c  pam_authy.h  pam_google_authenticator.c  pam_no_authy.c  pam_util.c  pam_util.h  sha1.c  util.c  util.h
tests/: pam_google_authenticator_unittest.c
utc-time/: app.yaml  main.py  utc-time-py3.py  utc-time.py
